# ChangeLog for x11-libs/qt
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.580 2009/06/02 18:06:58 fauli Exp $

  02 Jun 2009; Christian Faulhammer <fauli@gentoo.org> qt-4.5.1.ebuild:
  stable x86, bug 266201

  30 May 2009; Ben de Groot <yngwin@gentoo.org> qt-4.5.1.ebuild:
  Revert kde useflag addition, as it breaks stable

  29 May 2009; Ben de Groot <yngwin@gentoo.org> qt-4.5.1.ebuild:
  Add kde useflag to make dependency calculation easier, bug 270188

  28 May 2009; Robert Piasek <dagger@gentoo.org> qt-4.5.1.ebuild:
  stable on arm (bug #266201)

  24 May 2009; Tobias Klausmann <klausman@gentoo.org> qt-4.5.1.ebuild:
  Keyworded on alpha, bug #266201

  15 May 2009; Tobias Klausmann <klausman@gentoo.org> qt-4.5.1.ebuild:
  x11-libs/qt-webkit-4.5.1 does not compile on alpha (bug 269739), the meta
  ebuild depends on that, so dropping keyword

  14 May 2009; Ben de Groot <yngwin@gentoo.org> -qt-4.5.0.ebuild:
  Remove old

  13 May 2009; Brent Baude <ranger@gentoo.org> qt-4.5.1.ebuild:
  Marking qt-4.5.1 ppc stable for bug 266201

  27 Apr 2009; Markos Chandras <hwoarang@gentoo.org> -qt-3.3.8-r4.ebuild:
  Remove masked ebuild

*qt-4.5.1 (27 Apr 2009)

  27 Apr 2009; Markos Chandras <hwoarang@gentoo.org> +qt-4.5.1.ebuild:
  Version bump to 4.5.1

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Removing obsolete use flag definitions from metadata.xml

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org> -qt-4.3.3.ebuild,
  -qt-4.3.4-r1.ebuild, -qt-4.3.5.ebuild:
  Dropping 4.3* packages and 4.5.0_rc1

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> qt-4.5.0.ebuild:
  Add ~arm wrt #262462, re-add ~alpha/~ia64, add -sparc

*qt-4.5.0 (04 Mar 2009)

  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qt-4.5.0.ebuild:
  Version bump

  20 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-4.4.2.ebuild:
  Stable for HPPA (bug #248083).

*qt-4.5.0_rc1 (13 Feb 2009)
