@@ -5,6 +5,6 @@ AUX qt4/Assistant.desktop 368 RMD160 dd28aea43bc8e013e6631d0ee91449b8a2e9594d SH
 AUX qt4/Designer.desktop 374 RMD160 bdd36d944e2549649cd0a51382296d86d5c2ac37 SHA1 2ca9fc952d204635a2b62480cf4531faf2938110 SHA256 96a2d2a6c0723c1ce7cbb9fd295eadcc300450ce2b585d1168a380142be0e741
 AUX qt4/Linguist.desktop 362 RMD160 ce7f588d57300eb859634cabdccd5331da572c76 SHA1 ba914198e37fbf94a8bcbcbfb33bf0f5b45aec8b SHA256 3c527616f52bf533256150dab7f5f6e94bc4f73e2193fae20314cf3d70c4b1f7
 EBUILD qt-4.4.2.ebuild 862 RMD160 27c1eefc0d4e934ea2b690a1cb57b98cff35e06a SHA1 2ed0b3fc89a1e4827490b669b86e9f03d7e380c8 SHA256 98e2d9ea41336fea2987796bf48bc3870577a65cb55b5a5cf7f2885a0f5397f5
-EBUILD qt-4.5.1.ebuild 1335 RMD160 e7e0eead47393665ffd0cd001f30da5b5b08e44d SHA1 cdacd5ccb54dd46662f387e1e1241ad358e22b8a SHA256 afdfccc4d09c7d86f0fc67fb2773c5292d082e043ad9add66a50b6f8ee68364e
-MISC ChangeLog 46466 RMD160 e11906623a8ec661094971a45f7feb165246433f SHA1 6c6c9306207ea2d964429bc739230e20ff28a941 SHA256 1853344c5e2f94b92201991b7a7c23147169c6348bc6842ba1117d1377e44c80
-MISC metadata.xml 407 RMD160 bfda8fdbc5ea472d99e31e9c5c83e67a5e0b9ae1 SHA1 9bf8db20b71bd9e189872922eae678fff40eeb8d SHA256 8598cd7af79529ba00ebb8a0d2b32b6e8a03cb5b90ae700f16dd3bcce71dac79
+EBUILD qt-4.5.1.ebuild 1369 RMD160 91a190b56fbbac2f514f5c86e4de284e2690fa66 SHA1 41cc59ad7a7d0d64d1bb7150b6abec0431661b65 SHA256 296b87b887333d41e545d4255141c7fd806f8087e291b3db9c9065ff7d1f22e3
+MISC ChangeLog 46663 RMD160 1ff38ee4cd829eea078b7f4d239a00c6b7495541 SHA1 b7594d51c2e9be3dc9a927df916bfe404b2151f9 SHA256 4cb081af511b1b41d15f3405a64a363a9a0de35071870a2667b19d2297331c16
+MISC metadata.xml 504 RMD160 1c964085340a6c32da556e0dddba675aa599ca0c SHA1 eb798d83a888e31c15db0affca952dbdaf99ba28 SHA256 b3441d2b0fedef04315e978acea237525c7ef6899b5721174f55e82dc50bbb1d
