@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/qt
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.580 2009/06/02 18:06:58 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.581 2009/06/03 21:46:47 yngwin Exp $
+
+  03 Jun 2009; Ben de Groot <yngwin@gentoo.org> qt-4.5.1.ebuild,
+  metadata.xml:
+  Add kde useflag again, for selecting media-sound/phonon, now that that
+  package is stable on the needed arches
 
   02 Jun 2009; Christian Faulhammer <fauli@gentoo.org> qt-4.5.1.ebuild:
   stable x86, bug 266201
